improve testing (via #174)