@@ -2,47 +2,42 @@ package io.qameta.allure.gradle.allure;
 
 import io.qameta.allure.gradle.rule.GradleRunnerRule;
 import org.gradle.testkit.runner.BuildResult;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.File;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.gradle.testkit.runner.TaskOutcome.SUCCESS;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-@RunWith(Parameterized.class)
 public class AggregatedReportTest {
 
-    @Parameterized.Parameter(0)
-    public String version;
+    @TempDir
+    File tempDir;
 
-    @Parameterized.Parameter(1)
-    public String project;
-
-    @Parameterized.Parameter(2)
-    public String[] tasks;
-
-    @Rule
-    public GradleRunnerRule gradleRunner = new GradleRunnerRule()
-            .version(() -> version)
-            .project(() -> project)
-            .tasks(() -> tasks);
-
-    @Parameterized.Parameters(name = "{1} [{0}]")
-    public static Collection<Object[]> getFrameworks() {
-        return Arrays.asList(
-                new Object[]{"9.0.0", "src/it/report-multi", new String[]{"allureAggregateReport"}},
-                new Object[]{"8.14.3", "src/it/report-multi", new String[]{"allureAggregateReport"}},
-                new Object[]{"8.11.1", "src/it/report-multi", new String[]{"allureAggregateReport"}}
+    static Collection<org.junit.jupiter.params.provider.Arguments> getFrameworks() {
+        return List.of(
+                arguments("9.4.1", "src/it/report-multi", new String[]{"allureAggregateReport"}),
+                arguments("8.14.3", "src/it/report-multi", new String[]{"allureAggregateReport"}),
+                arguments("8.11.1", "src/it/report-multi", new String[]{"allureAggregateReport"})
         );
     }
 
-    @Test
-    public void shouldGenerateAllureReport() {
+    @ParameterizedTest(name = "{1} [{0}]")
+    @MethodSource("getFrameworks")
+    void shouldGenerateAllureReport(String version, String project, String[] tasks) {
+        GradleRunnerRule gradleRunner = new GradleRunnerRule()
+                .rootDir(tempDir)
+                .version(version)
+                .project(project)
+                .tasks(tasks)
+                .build();
+
         BuildResult buildResult = gradleRunner.getBuildResult();
 
         assertThat(buildResult.getTasks()).as("Download allure task status")
