@@ -2,36 +2,36 @@ package io.qameta.allure.gradle.allure;
 
 import io.qameta.allure.gradle.rule.GradleRunnerRule;
 import org.gradle.testkit.runner.BuildResult;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.gradle.testkit.runner.TaskOutcome.SUCCESS;
 
-@RunWith(Parameterized.class)
 public class CustomResultsDirTest {
-    @Parameterized.Parameter
-    public String version;
 
-    @Rule
-    public GradleRunnerRule gradleRunner = new GradleRunnerRule()
-            .version(() -> version)
-            .project("src/it/custom-results-dir")
-            .tasks("test", "allureReport");
+    @TempDir
+    File tempDir;
 
-    @Parameterized.Parameters(name = "{0}")
-    public static Collection<String> getVersions() {
-        return Arrays.asList("9.0.0", "8.14.3", "8.11.1");
+    static Collection<String> getVersions() {
+        return List.of("9.4.1", "8.14.3", "8.11.1");
     }
 
-    @Test
-    public void customResultsDirIsPublishedByAdapterAndUsedByReportTask() {
+    @ParameterizedTest(name = "{0}")
+    @MethodSource("getVersions")
+    void customResultsDirIsPublishedByAdapterAndUsedByReportTask(String version) {
+        GradleRunnerRule gradleRunner = new GradleRunnerRule()
+                .rootDir(tempDir)
+                .version(version)
+                .project("src/it/custom-results-dir")
+                .tasks("test", "allureReport")
+                .build();
+
         BuildResult buildResult = gradleRunner.getBuildResult();
 
         assertThat(buildResult.getTasks()).as("Gradle build task statuses")
